The initial version of third task with taro and weather parsing